ReadMe 등록 및 table colummn 정리

--- a/app/views/playlists/index.html.erb
+++ b/app/views/playlists/index.html.erb
@@ -6,6 +6,10 @@
     <input type="text" id="title" name="title" />
     <br><br>
 
+    <label for="description">Playlist 설명:</label>
+    <input type="text" id="description" name="description" />
+    <br><br>
+
     <label for="jsondata">Spotify Playlist(JSON)</label>
     <textarea id="jsondata" name="json_data" rows="10" cols="50"></textarea>
     <br><br>
